--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8770,6 +8770,18 @@ button.close {
   }
 }
 /* line 3, ../sass/app.scss */
-h1 {
-  background-color: green;
+.center {
+  margin: 0 auto;
+}
+
+/* line 7, ../sass/app.scss */
+.text-center {
+  text-align: center;
+}
+
+/* line 12, ../sass/app.scss */
+.park-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
