--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,5 +13,13 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		li {
+			margin: 5px 0 5px 0;
+			padding: 40px 40px 20px 40px;
+			border: 1px solid black;
+			p {
+				margin-left: 0;
+			}
+		}
 	}
 }
