--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,15 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+html {
+	-webkit-font-smoothing : antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-shadow            : 0 0 1px rgba(128,128,128,0.01);
+}
+
+body {
+	font-family: 'Archivo Narrow', serif;
+}
+
 .center {
 	margin: 0 auto;
 }
@@ -11,12 +21,12 @@
 .park-list {
 	ul {
 		list-style: none;
-		margin: 0;
-		padding: 0;
+		margin    : 0;
+		padding   : 0;
 		li {
-			margin: 5px 0 5px 0;
+			margin : 5px 0 5px 0;
 			padding: 40px 40px 20px 40px;
-			border: 1px solid black;
+			border : 1px solid black;
 			p {
 				margin-left: 0;
 			}
