--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,7 +26,7 @@ body {
 		li {
 			margin : 5px 0 5px 0;
 			padding: 40px 40px 20px 40px;
-			border : 1px solid black;
+			border : 1px solid grey;
 			p {
 				margin-left: 0;
 			}
