image resize and cleanup

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,7 +18,7 @@ body {
 	text-align: center;
 }
 
-.park-list {
+.park-nav {
 	ul {
 		list-style: none;
 		margin    : 0;
@@ -26,7 +26,6 @@ body {
 		li {
 			margin : 5px 0 5px 0;
 			padding: 40px 40px 20px 40px;
-			border : 1px solid grey;
 			p {
 				margin-left: 0;
 			}
