--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,11 +24,32 @@ body {
 		margin    : 0;
 		padding   : 0;
 		li {
-			margin : 5px 0 5px 0;
-			padding: 40px 40px 20px 40px;
+			position: relative;
+			height  : 120px;
+			width   : auto;
+			margin  : 5px 0 5px 0;
 			p {
-				margin-left: 0;
+				position        : absolute;
+				bottom          : 0;
+				left            : 0;
+				margin          : 0;
+				width           : 100%;
+				background-color: rgba( 255, 255, 255, .5 );
+				font-size       : 20px;
 			}
 		}
+	}
+}
+
+.li-bg {
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition   : all .2s ease-in-out;
+	-ms-transition    : all .2s ease-in-out;
+	-o-transition     : all .2s ease-in-out;
+	transition        : all .2s ease-in-out;
+	opacity           : 1;
+	&:hover {
+		opacity: .9;
+		cursor : pointer;
 	}
 }
