--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,14 +28,30 @@ body {
 			height  : 120px;
 			width   : auto;
 			margin  : 5px 0 5px 0;
+			-webkit-transition: all .2s ease-out;
+			-moz-transition   : all .2s ease-out;
+			-ms-transition    : all .2s ease-out;
+			-o-transition     : all .2s ease-out;
+			transition        : all .2s ease-out;
 			p {
-				position        : absolute;
-				bottom          : 0;
-				left            : 0;
-				margin          : 0;
-				width           : 100%;
-				background-color: rgba( 255, 255, 255, .5 );
-				font-size       : 20px;
+				position          : absolute;
+				bottom            : 0;
+				left              : 0;
+				margin            : 0;
+				padding           : 0 0 0 10%;
+				width             : 100%;
+				background-color  : rgba( 0, 0, 0, .5 );
+				font-size         : 20px;
+				color             : #fff;
+				font-style        : normal;
+			}
+			&:hover {
+				-webkit-transform : translate(0px,-5px);
+				-moz-transform    : translate(0px,-5px);
+				-ms-transform     : translate(0px,-5px);
+				-o-transform      : translate(0px,-5px);
+				transform         : translate(0px,-5px);
+
 			}
 		}
 	}
