--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8803,19 +8803,35 @@ body {
   height: 120px;
   width: auto;
   margin: 5px 0 5px 0;
+  -webkit-transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -ms-transition: all .2s ease-out;
+  -o-transition: all .2s ease-out;
+  transition: all .2s ease-out;
 }
-/* line 31, ../sass/app.scss */
+/* line 36, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
   left: 0;
   margin: 0;
+  padding: 0 0 0 10%;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
+  color: #fff;
+  font-style: normal;
+}
+/* line 48, ../sass/app.scss */
+.park-nav ul li:hover {
+  -webkit-transform: translate(0px, -5px);
+  -moz-transform: translate(0px, -5px);
+  -ms-transform: translate(0px, -5px);
+  -o-transform: translate(0px, -5px);
+  transform: translate(0px, -5px);
 }
 
-/* line 44, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -8824,7 +8840,7 @@ body {
   transition: all .2s ease-in-out;
   opacity: 1;
 }
-/* line 51, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .li-bg:hover {
   opacity: .9;
   cursor: pointer;
