--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,22 @@ body {
 	font-family: 'Archivo Narrow', serif;
 }
 
+@mixin transitionStyle( $type, $time, $style ) {
+	-webkit-transition: $type $time $style;
+	-moz-transition   : $type $time $style;
+	-ms-transition    : $type $time $style;
+	-o-transition     : $type $time $style;
+	transition        : $type $time $style;
+}
+
+@mixin translateStyle( $x, $y ) {
+	-webkit-transform : translate( $x, $y );
+	-moz-transform    : translate( $x, $y );
+	-ms-transform     : translate( $x, $y );
+	-o-transform      : translate( $x, $y );
+	transform         : translate( $x, $y );
+}
+
 .center {
 	margin: 0 auto;
 }
@@ -28,11 +44,7 @@ body {
 			height  : 120px;
 			width   : auto;
 			margin  : 5px 0 5px 0;
-			-webkit-transition: all .2s ease-out;
-			-moz-transition   : all .2s ease-out;
-			-ms-transition    : all .2s ease-out;
-			-o-transition     : all .2s ease-out;
-			transition        : all .2s ease-out;
+			@include transitionStyle( all, .2s, ease-out );
 			p {
 				position          : absolute;
 				bottom            : 0;
@@ -42,28 +54,19 @@ body {
 				width             : 100%;
 				background-color  : rgba( 0, 0, 0, .5 );
 				font-size         : 20px;
-				color             : #fff;
+				color             : #f5f5f5;
 				font-style        : normal;
 			}
 			&:hover {
-				-webkit-transform : translate(0px,-5px);
-				-moz-transform    : translate(0px,-5px);
-				-ms-transform     : translate(0px,-5px);
-				-o-transform      : translate(0px,-5px);
-				transform         : translate(0px,-5px);
-
+				@include translateStyle( 0px, -5px );
 			}
 		}
 	}
 }
 
 .li-bg {
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition   : all .2s ease-in-out;
-	-ms-transition    : all .2s ease-in-out;
-	-o-transition     : all .2s ease-in-out;
-	transition        : all .2s ease-in-out;
-	opacity           : 1;
+	@include transitionStyle( all, .2s, ease-in-out );
+	opacity: 1;
 	&:hover {
 		opacity: .9;
 		cursor : pointer;
