--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8781,35 +8781,35 @@ body {
   font-family: 'Archivo Narrow', serif;
 }
 
-/* line 13, ../sass/app.scss */
+/* line 29, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 17, ../sass/app.scss */
+/* line 33, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 22, ../sass/app.scss */
+/* line 38, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 26, ../sass/app.scss */
+/* line 42, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 120px;
   width: auto;
   margin: 5px 0 5px 0;
-  -webkit-transition: all .2s ease-out;
-  -moz-transition: all .2s ease-out;
-  -ms-transition: all .2s ease-out;
-  -o-transition: all .2s ease-out;
-  transition: all .2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -ms-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
-/* line 36, ../sass/app.scss */
+/* line 48, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8819,10 +8819,10 @@ body {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
-  color: #fff;
+  color: #f5f5f5;
   font-style: normal;
 }
-/* line 48, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 .park-nav ul li:hover {
   -webkit-transform: translate(0px, -5px);
   -moz-transform: translate(0px, -5px);
@@ -8831,16 +8831,16 @@ body {
   transform: translate(0px, -5px);
 }
 
-/* line 60, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .li-bg {
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -ms-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   opacity: 1;
 }
-/* line 67, ../sass/app.scss */
+/* line 70, ../sass/app.scss */
 .li-bg:hover {
   opacity: .9;
   cursor: pointer;
