--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,21 +41,28 @@ body {
 		padding   : 0;
 		li {
 			position: relative;
-			height  : 120px;
+			height  : 150px;
 			width   : auto;
 			margin  : 5px 0 5px 0;
 			@include transitionStyle( all, .2s, ease-out );
 			p {
-				position          : absolute;
-				bottom            : 0;
-				left              : 0;
-				margin            : 0;
-				padding           : 0 0 0 10%;
-				width             : 100%;
-				background-color  : rgba( 0, 0, 0, .5 );
-				font-size         : 20px;
-				color             : #f5f5f5;
-				font-style        : normal;
+				position  : absolute;
+				bottom    : 0;
+				left      : 0;
+				margin    : 0;
+				padding   : 5px 0 5px 10%;
+				width     : 100%;
+				font-size : 18px;
+				color     : #f5f5f5;
+				font-style: normal;
+				background: rgba(0,0,0,0.8);
+				background: -moz-linear-gradient(left, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
+				background: -webkit-gradient(left top, right top, color-stop(41%, rgba(0,0,0,0.8)), color-stop(75%, rgba(0,0,0,0.34)), color-stop(100%, rgba(255,255,255,0)));
+				background: -webkit-linear-gradient(left, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
+				background: -o-linear-gradient(left, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
+				background: -ms-linear-gradient(left, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
+				background: linear-gradient(to right, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
+				filter    : progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=1 );
 			}
 			&:hover {
 				@include translateStyle( 0px, -2px );
