--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8800,7 +8800,7 @@ body {
 /* line 42, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
-  height: 120px;
+  height: 150px;
   width: auto;
   margin: 5px 0 5px 0;
   -webkit-transition: all 0.2s ease-out;
@@ -8815,14 +8815,21 @@ body {
   bottom: 0;
   left: 0;
   margin: 0;
-  padding: 0 0 0 10%;
+  padding: 5px 0 5px 10%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-size: 20px;
+  font-size: 18px;
   color: #f5f5f5;
   font-style: normal;
+  background: rgba(0, 0, 0, 0.8);
+  background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.8) 41%, rgba(0, 0, 0, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(41%, rgba(0, 0, 0, 0.8)), color-stop(75%, rgba(0, 0, 0, 0.34)), color-stop(100%, rgba(255, 255, 255, 0)));
+  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.8) 41%, rgba(0, 0, 0, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
+  background: -o-linear-gradient(left, rgba(0, 0, 0, 0.8) 41%, rgba(0, 0, 0, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(0, 0, 0, 0.8) 41%, rgba(0, 0, 0, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 41%, rgba(0, 0, 0, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=1 );
 }
-/* line 60, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .park-nav ul li:hover {
   -webkit-transform: translate(0px, -2px);
   -moz-transform: translate(0px, -2px);
@@ -8831,7 +8838,7 @@ body {
   transform: translate(0px, -2px);
 }
 
-/* line 67, ../sass/app.scss */
+/* line 74, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -8840,7 +8847,7 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 70, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 .li-bg:hover {
   opacity: 1;
   cursor: pointer;
