--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,29 @@ html {
 	text-shadow            : 0 0 1px rgba(128,128,128,0.01);
 }
 
+*::selection {
+    background-color: transparent;
+}
+
+*::-moz-selection {
+    background-color: transparent;
+}
+
+* {
+    -webkit-user-select: none;
+	-moz-user-select           : -moz-none;
+	-ms-user-select            : none;
+	user-select                : none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+input[type="text"], textarea, [contenteditable] {
+	-webkit-user-select: text;
+	-moz-user-select   : text;
+	-ms-user-select    : text;
+	user-select        : text;
+}
+
 body {
 	font-family: 'Archivo Narrow', serif;
 }
@@ -44,7 +67,6 @@ body {
 			height  : 150px;
 			width   : auto;
 			margin  : 5px 0 5px 0;
-			@include transitionStyle( all, .2s, ease-out );
 			p {
 				position  : absolute;
 				bottom    : 0;
@@ -63,9 +85,12 @@ body {
 				background: -ms-linear-gradient(left, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
 				background: linear-gradient(to right, rgba(0,0,0,0.8) 41%, rgba(0,0,0,0.34) 75%, rgba(255,255,255,0) 100%);
 				filter    : progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=1 );
+				@include transitionStyle( all, .2s, ease-out );
 			}
-			&:active {
-				@include translateStyle( 0px, -2px );
+			&:hover {
+				p {
+					@include translateStyle( -5px, 0px );
+				}
 			}
 		}
 	}
@@ -80,4 +105,15 @@ body {
 	&:active {
 		opacity: 1;
 	}
+}
+
+.svg-check {
+	display    : none;
+	position   : absolute;
+	top        : 50%;
+	left       : 50%;
+	margin-left: -20px;
+	margin-top : -20px;
+	width      : 40px;
+	height     : 40px;
 }
