--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -67,6 +67,13 @@ body {
 			height  : 150px;
 			width   : auto;
 			margin  : 5px 0 5px 0;
+
+			@media ( min-width: $screen-sm )
+			{
+				width: 50%;
+				margin: 0 auto;
+				overflow: hidden;
+			}
 			p {
 				position  : absolute;
 				bottom    : 0;
