--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8809,22 +8809,29 @@ body {
 }
 
 /* line 52, ../sass/app.scss */
+#find-all {
+  background: url(../../../public/images/allparks.jpg) no-repeat left center;
+  background-size: 100%;
+  background-position: center;
+}
+
+/* line 58, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 56, ../sass/app.scss */
+/* line 62, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 61, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 65, ../sass/app.scss */
+/* line 71, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8832,14 +8839,14 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 65, ../sass/app.scss */
+  /* line 71, ../sass/app.scss */
   .park-nav ul li {
     width: 50%;
     margin: 0 auto;
     overflow: hidden;
   }
 }
-/* line 77, ../sass/app.scss */
+/* line 83, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8864,7 +8871,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 98, ../sass/app.scss */
+/* line 104, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -8873,7 +8880,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 106, ../sass/app.scss */
+/* line 112, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -8882,16 +8889,16 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 109, ../sass/app.scss */
+/* line 115, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 112, ../sass/app.scss */
+/* line 118, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 117, ../sass/app.scss */
+/* line 123, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -8903,7 +8910,7 @@ body {
   height: 40px;
 }
 
-/* line 128, ../sass/app.scss */
+/* line 134, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni .5s forwards;
   -moz-animation: zoomAni .5s forwards;
@@ -8950,7 +8957,7 @@ body {
     transform: scale(1, 1) rotate(360deg);
   }
 }
-/* line 178, ../sass/app.scss */
+/* line 184, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni .5s forwards;
   -moz-animation: slideAni .5s forwards;
