--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -49,10 +49,33 @@ body {
 	transform         : translate( $x, $y );
 }
 
+@mixin zoomAnimation( $ani, $s, $event ) {
+	-webkit-animation: $ani $s $event;
+	-moz-animation   : $ani $s $event;
+	-ms-animation    : $ani $s $event;
+	-o-animation     : $ani $s $event;
+	animation        : $ani $s $event;
+}
+
 #find-all {
 	background         :  url(../../../public/images/allparks.jpg) no-repeat left center;
 	background-size    : 100%;
 	background-position: center;
+}
+
+.fire-btn {
+	position        : fixed;
+	bottom          : 2%;
+	right           : 2%;
+	display         : none;
+	width           : 50px;
+	height          : 50px;
+	border-radius   : 25px;
+	border          : 2px solid #333;
+	background-color: #f7f7f7;
+	text-align      : center;
+	line-height     : 48px;
+	color           : #333;
 }
 
 .center {
@@ -132,11 +155,11 @@ body {
 }
 
 .zoom-check {
-	-webkit-animation: zoomAni .5s forwards;
-	-moz-animation   : zoomAni .5s forwards;
-	-ms-animation    : zoomAni .5s forwards;
-	-o-animation     : zoomAni .5s forwards;
-	animation        : zoomAni .5s forwards;
+	@include zoomAnimation( zoomAni, .5s, forwards );
+}
+
+.zoom-check-reverse {
+	@include zoomAnimation( zoomAniRev, .5s, forwards );
 }
 
 @-webkit-keyframes zoomAni {
@@ -178,6 +201,48 @@ body {
     100% {
 		-o-transform: scale( 1, 1 ) rotate( 360deg );
 		transform   : scale( 1, 1 ) rotate( 360deg );
+    }
+}
+
+@-webkit-keyframes zoomAniRev {
+    0% {
+		-webkit-transform: scale( 1, 1 ) rotate( 0deg );
+		transform        : scale( 1, 1 ) rotate( 0deg );
+    }
+    100% {
+		-webkit-transform: scale( 0, 0 ) rotate( 360deg );
+		transform        : scale( 0, 0 ) rotate( 360deg );
+    }
+}
+
+@keyframes zoomAniRev {
+   0% {
+		transform: scale( 1, 1 ) rotate( 0deg );
+    }
+    100% {
+		transform: scale( 0, 0 ) rotate( 360deg );
+    }
+}
+
+@-moz-keyframes zoomAniRev {
+    0% {
+		-moz-transform: scale( 1, 1 ) rotate( 0deg );
+		transform     : scale( 1, 1 ) rotate( 0deg );
+    }
+    100% {
+		-moz-transform: scale( 0, 0 ) rotate( 360deg );
+		transform     : scale( 0, 0 ) rotate( 360deg );
+    }
+}
+
+@-o-keyframes zoomAniRev {
+    0% {
+		-o-transform: scale( 1, 1 ) rotate( 0deg );
+		transform   : scale( 1, 1 ) rotate( 0deg );
+    }
+    100% {
+		-o-transform: scale( 0, 0 ) rotate( 360deg );
+		transform   : scale( 0, 0 ) rotate( 360deg );
     }
 }
 
