--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8808,30 +8808,46 @@ body {
   font-family: 'Archivo Narrow', serif;
 }
 
-/* line 52, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 #find-all {
   background: url(../../../public/images/allparks.jpg) no-repeat left center;
   background-size: 100%;
   background-position: center;
 }
 
-/* line 58, ../sass/app.scss */
+/* line 66, ../sass/app.scss */
+.fire-btn {
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  display: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  border: 2px solid #333;
+  background-color: #f7f7f7;
+  text-align: center;
+  line-height: 48px;
+  color: #333;
+}
+
+/* line 81, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 62, ../sass/app.scss */
+/* line 85, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 67, ../sass/app.scss */
+/* line 90, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 71, ../sass/app.scss */
+/* line 94, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8839,14 +8855,14 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 71, ../sass/app.scss */
+  /* line 94, ../sass/app.scss */
   .park-nav ul li {
     width: 50%;
     margin: 0 auto;
     overflow: hidden;
   }
 }
-/* line 83, ../sass/app.scss */
+/* line 106, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8871,7 +8887,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 104, ../sass/app.scss */
+/* line 127, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -8880,7 +8896,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 112, ../sass/app.scss */
+/* line 135, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -8889,16 +8905,16 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 115, ../sass/app.scss */
+/* line 138, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 118, ../sass/app.scss */
+/* line 141, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 123, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -8910,13 +8926,22 @@ body {
   height: 40px;
 }
 
-/* line 134, ../sass/app.scss */
+/* line 157, ../sass/app.scss */
 .zoom-check {
-  -webkit-animation: zoomAni .5s forwards;
-  -moz-animation: zoomAni .5s forwards;
-  -ms-animation: zoomAni .5s forwards;
-  -o-animation: zoomAni .5s forwards;
-  animation: zoomAni .5s forwards;
+  -webkit-animation: zoomAni 0.5s forwards;
+  -moz-animation: zoomAni 0.5s forwards;
+  -ms-animation: zoomAni 0.5s forwards;
+  -o-animation: zoomAni 0.5s forwards;
+  animation: zoomAni 0.5s forwards;
+}
+
+/* line 161, ../sass/app.scss */
+.zoom-check-reverse {
+  -webkit-animation: zoomAniRev 0.5s forwards;
+  -moz-animation: zoomAniRev 0.5s forwards;
+  -ms-animation: zoomAniRev 0.5s forwards;
+  -o-animation: zoomAniRev 0.5s forwards;
+  animation: zoomAniRev 0.5s forwards;
 }
 
 @-webkit-keyframes zoomAni {
@@ -8957,7 +8982,45 @@ body {
     transform: scale(1, 1) rotate(360deg);
   }
 }
-/* line 184, ../sass/app.scss */
+@-webkit-keyframes zoomAniRev {
+  0% {
+    -webkit-transform: scale(1, 1) rotate(0deg);
+    transform: scale(1, 1) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: scale(0, 0) rotate(360deg);
+    transform: scale(0, 0) rotate(360deg);
+  }
+}
+@keyframes zoomAniRev {
+  0% {
+    transform: scale(1, 1) rotate(0deg);
+  }
+  100% {
+    transform: scale(0, 0) rotate(360deg);
+  }
+}
+@-moz-keyframes zoomAniRev {
+  0% {
+    -moz-transform: scale(1, 1) rotate(0deg);
+    transform: scale(1, 1) rotate(0deg);
+  }
+  100% {
+    -moz-transform: scale(0, 0) rotate(360deg);
+    transform: scale(0, 0) rotate(360deg);
+  }
+}
+@-o-keyframes zoomAniRev {
+  0% {
+    -o-transform: scale(1, 1) rotate(0deg);
+    transform: scale(1, 1) rotate(0deg);
+  }
+  100% {
+    -o-transform: scale(0, 0) rotate(360deg);
+    transform: scale(0, 0) rotate(360deg);
+  }
+}
+/* line 249, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni .5s forwards;
   -moz-animation: slideAni .5s forwards;
