--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8832,9 +8832,6 @@ body {
   z-index: 1;
   cursor: pointer;
   font-weight: bold;
-  -webkit-box-shadow: 0px 8px 36px -9px black;
-  -moz-box-shadow: 0px 8px 36px -9px black;
-  box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
   /* line 66, ../sass/app.scss */
@@ -8845,23 +8842,48 @@ body {
   }
 }
 
-/* line 93, ../sass/app.scss */
+/* line 90, ../sass/app.scss */
+.fire-btn-shadow {
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  display: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  border: 1px solid #666;
+  background-color: #f7f7f7;
+  z-index: 0;
+  -webkit-box-shadow: 0px 8px 36px -9px black;
+  -moz-box-shadow: 0px 8px 36px -9px black;
+  box-shadow: 0px 8px 36px -9px black;
+}
+@media (min-width: 1200px) {
+  /* line 90, ../sass/app.scss */
+  .fire-btn-shadow {
+    left: 50%;
+    right: 0;
+    margin-left: -25px;
+  }
+}
+
+/* line 112, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 97, ../sass/app.scss */
+/* line 116, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 102, ../sass/app.scss */
+/* line 121, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 106, ../sass/app.scss */
+/* line 125, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8869,14 +8891,14 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 106, ../sass/app.scss */
+  /* line 125, ../sass/app.scss */
   .park-nav ul li {
     width: 50%;
     margin: 0 auto;
     overflow: hidden;
   }
 }
-/* line 118, ../sass/app.scss */
+/* line 137, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8901,7 +8923,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 139, ../sass/app.scss */
+/* line 158, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -8910,7 +8932,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 147, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -8919,16 +8941,16 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 150, ../sass/app.scss */
+/* line 169, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 153, ../sass/app.scss */
+/* line 172, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 158, ../sass/app.scss */
+/* line 177, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -8940,7 +8962,7 @@ body {
   height: 40px;
 }
 
-/* line 169, ../sass/app.scss */
+/* line 188, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -8949,13 +8971,31 @@ body {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 173, ../sass/app.scss */
+/* line 192, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
   -ms-animation: zoomAniRev 0.5s forwards;
   -o-animation: zoomAniRev 0.5s forwards;
   animation: zoomAniRev 0.5s forwards;
+}
+
+/* line 196, ../sass/app.scss */
+.zoom-check-shadow {
+  -webkit-animation: zoomAniRevShadow 0.5s forwards;
+  -moz-animation: zoomAniRevShadow 0.5s forwards;
+  -ms-animation: zoomAniRevShadow 0.5s forwards;
+  -o-animation: zoomAniRevShadow 0.5s forwards;
+  animation: zoomAniRevShadow 0.5s forwards;
+}
+
+/* line 200, ../sass/app.scss */
+.zoom-check-shadow-reverse {
+  -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
+  -moz-animation: zoomAniRevShadowRev 0.5s forwards;
+  -ms-animation: zoomAniRevShadowRev 0.5s forwards;
+  -o-animation: zoomAniRevShadowRev 0.5s forwards;
+  animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
 @-webkit-keyframes zoomAni {
@@ -9034,7 +9074,83 @@ body {
     transform: scale(0, 0) rotate(360deg);
   }
 }
-/* line 261, ../sass/app.scss */
+@-webkit-keyframes zoomAniRevShadow {
+  0% {
+    -webkit-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+  100% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+@keyframes zoomAniRevShadow {
+  0% {
+    transform: scale(0, 0);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@-moz-keyframes zoomAniRevShadow {
+  0% {
+    -moz-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+  100% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+@-o-keyframes zoomAniRevShadow {
+  0% {
+    -o-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+  100% {
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+@-webkit-keyframes zoomAniRevShadowRev {
+  0% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  100% {
+    -webkit-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+}
+@keyframes zoomAniRevShadowRev {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(0, 0);
+  }
+}
+@-moz-keyframes zoomAniRevShadowRev {
+  0% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  100% {
+    -moz-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+}
+@-o-keyframes zoomAniRevShadowRev {
+  0% {
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  100% {
+    -o-transform: scale(0, 0);
+    transform: scale(0, 0);
+  }
+}
+/* line 372, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni .5s forwards;
   -moz-animation: slideAni .5s forwards;
