--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -71,11 +71,12 @@ body {
 	width             : 50px;
 	height            : 50px;
 	border-radius     : 25px;
-	border            : 1px solid #666;
-	background-color  : #f7f7f7;
+	border            : 3px solid #e3d8c9;
+	background-color  : #aec1ae;
 	text-align        : center;
-	line-height       : 50px;
-	color             : #333;
+	line-height       : 43px;
+	color             : #3c563c;
+	font-size         : 19px;
 	z-index           : 1;
 	cursor            : pointer;
 	font-weight       : bold;
