--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8824,11 +8824,12 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 25px;
-  border: 1px solid #666;
-  background-color: #f7f7f7;
+  border: 3px solid #e3d8c9;
+  background-color: #aec1ae;
   text-align: center;
-  line-height: 50px;
-  color: #333;
+  line-height: 43px;
+  color: #3c563c;
+  font-size: 19px;
   z-index: 1;
   cursor: pointer;
   font-weight: bold;
@@ -8842,7 +8843,7 @@ body {
   }
 }
 
-/* line 90, ../sass/app.scss */
+/* line 91, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8859,7 +8860,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 90, ../sass/app.scss */
+  /* line 91, ../sass/app.scss */
   .fire-btn-shadow {
     left: 50%;
     right: 0;
@@ -8867,23 +8868,23 @@ body {
   }
 }
 
-/* line 112, ../sass/app.scss */
+/* line 113, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 116, ../sass/app.scss */
+/* line 117, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 121, ../sass/app.scss */
+/* line 122, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 125, ../sass/app.scss */
+/* line 126, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8891,14 +8892,14 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 125, ../sass/app.scss */
+  /* line 126, ../sass/app.scss */
   .park-nav ul li {
     width: 50%;
     margin: 0 auto;
     overflow: hidden;
   }
 }
-/* line 137, ../sass/app.scss */
+/* line 138, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8923,7 +8924,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 158, ../sass/app.scss */
+/* line 159, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -8932,7 +8933,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 166, ../sass/app.scss */
+/* line 167, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -8941,16 +8942,16 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 169, ../sass/app.scss */
+/* line 170, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 172, ../sass/app.scss */
+/* line 173, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 177, ../sass/app.scss */
+/* line 178, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -8962,7 +8963,7 @@ body {
   height: 40px;
 }
 
-/* line 188, ../sass/app.scss */
+/* line 189, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -8971,7 +8972,7 @@ body {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 192, ../sass/app.scss */
+/* line 193, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -8980,7 +8981,7 @@ body {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 196, ../sass/app.scss */
+/* line 197, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -8989,7 +8990,7 @@ body {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 200, ../sass/app.scss */
+/* line 201, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9150,7 +9151,7 @@ body {
     transform: scale(0, 0);
   }
 }
-/* line 372, ../sass/app.scss */
+/* line 373, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni .5s forwards;
   -moz-animation: slideAni .5s forwards;
