--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -63,6 +63,35 @@ body {
 	background-position: center;
 }
 
+.reset-btn {
+	position          : fixed;
+	bottom            : 2%;
+	right             : 2%;
+	margin-right      : 52px;
+	display           : none;
+	width             : 32px;
+	height            : 32px;
+	border-radius     : 16px;
+	border            : 2px solid #e3d8c9;
+	background-color  : #aec1ae;
+	text-align        : center;
+	color             : #3c563c;
+	font-size         : 20px;
+	z-index           : 1;
+	cursor            : pointer;
+	font-weight       : bold;
+
+	i {
+		line-height: 28px;
+	}
+
+	@media ( min-width: $screen-lg ) {
+		left       : 50%;
+		right      : 0;
+		margin-left: -68px;
+	}
+}
+
 .fire-btn {
 	position          : fixed;
 	bottom            : 2%;
